<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Finter</string>
    <string name="login">Login</string>
    <string name="email_address_or_mobile_number">Email Address OR Mobile Number</string>
    <string name="password">Password</string>
    <string name="password_">Password *</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="register_now">REGISTER NOW</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="can_t_access_my_account">Can\'t access my account?</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_">Mobile Number *</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="google_key">AIzaSyDOCmhjhvtLURfWgzk_GWSUvR18b3xVWeo</string>
    <string name="user_name">User Name</string>
    <string name="sign_in">Sign In</string>
    <string name="for_pass">Forgot Password</string>
    <string name="or">OR</string>
    <string name="forgot_email">Forgot Email</string>
    <string name="still">Still not Connect</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_">Confirm Password *</string>
    <string name="alternate_email_">Alternate Email</string>
    <string name="save_amp_next">Save</string>
    <string name="dashboard">Dash Board</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="action_settings">Settings</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="government_yojanas">Government Yojanas</string>
    <string name="banks_services">Banks Services</string>
    <string name="payment_circular">Payment Circular</string>
    <string name="digital_bonofied">Digital Bonofied</string>
    <string name="notification">Notification</string>
    <string name="other_apps">Other Apps</string>
    <string name="locate_kiosk">Locate Kiosk</string>
    <string name="contact_us">Contact Us</string>
    <string name="faqs">Faqs</string>
    <string name="feedback">FeedBack</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="government_n_schemes">Government \n Schemes</string>
    <string name="yojanas">Yojanas</string>
    <string name="government_n_services">Government \n Services</string>
    <string name="government_events">Government Events</string>
    <string name="government_center_n_near_by">Government Center \n near by</string>
    <string name="success">Success</string>
    <string name="offline">offline</string>
    <string name="go_online">Go online</string>
    <string name="subscribe_service">Subscribe Service</string>
    <string name="kiosk_center">KIOSK center</string>
    <string name="app_info">App Info</string>
    <string name="share_this_app">Share this App</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="more_apps">More Apps</string>
    <string name="log_in_with">log in with…</string>
    <string name="by_singing_in_you_agree_to_terms_and_conditions_and_also_privacy_policy">by singing in you agree to terms and conditions and also Privacy policy…</string>
    <string name="don_t_you_have_account_yet_signup_here">Don\'t you have account yet? SignUp here…</string>
    <string name="all_data">All Data</string>
    <string name="enter_contact_no">Enter Contact No.</string>
    <string name="subject">Subject</string>
    <string name="enter_email_id_">Enter Email Id</string>
    <string name="subject_">Subject</string>
    <string name="enter_sub">Enter Subject</string>
    <string name="message_">Message</string>
    <string name="enter_fab_button">Enter Fab Button</string>
    <string name="library_name">MaterialBarcodeScanner</string>
    <string name="permission_camera_rationale">Access to the camera is needed for barcode detection.</string>
    <string name="no_camera_permission">Cannot start the barcode reader because the camera permission was not granted.</string>
    <string name="fb_signup">Facebook</string>
    <string name="google_signup">Google+</string>
    <string name="uidai">UIDAI</string>
    <string name="fingerprint_authentication">Fingerprint Authentication</string>
    <string name="place_your_finger_on_the_scanner_to_proceed">Place your Finger on the Scanner to Proceed</string>
    <string name="enter_aadhaar_number">Enter Aadhaar number</string>
    <string name="otp_has_been_sent_to_your_registered_mobile_number">OTP has been sent to your registered Mobile number</string>
    <string name="your_name">Your Name</string>
    <string name="your_name_">Your Name *</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="base_stats">Base Stats</string>
    <string name="hp">HP</string>
    <string name="atk">ATK</string>
    <string name="def">DEF</string>
    <string name="spd">SPD</string>
    <string name="exp">EXP</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text"> Large Text</string>
    <string name="finter_easy_business">Finter - Easy Business</string>
    <string name="hello_">Hello,</string>
    <string name="new_message">New Message</string>
    <string name="last_update_on_01_jan_2020">Last update on 01, jan 2020</string>
    <string name="invoice">Invoice</string>
    <string name="sales_invoice">Sales Invoice</string>
    <string name="estimate">Estimate</string>
    <string name="purchase_invoice">Purchase\nInvoice</string>
    <string name="expense">Expense</string>
    <string name="inventory">Inventory</string>
    <string name="customer_vendor">Customer / Vendor</string>
    <string name="accountants_receivable">Accountants\nReceivable</string>
    <string name="accounts_receivable">Accounts\nReceivable</string>
    <string name="rupee_symbol">₹</string>
    <string name="accountants_payable">Accountants\nPayable</string>
    <string name="accounts_payable">Accounts\nPayable</string>
    <string name="e_way_bill">E-Way Bill</string>
    <string name="sales">Sales</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="copyright">Copyright © mustofin.com</string>
    <string name="you_don_t_have_any_invoices_currently">You don\'t have any invoices currently.</string>
    <string name="you_don_t_have_any_supplier_currently">You don\'t have any Supplier currently.</string>
    <string name="you_don_t_have_any_accountant_currently">You don\'t have any Accountant currently.</string>
    <string name="you_don_t_have_any_customer_currently">You don\'t have any Customer currently.</string>
    <string name="you_don_t_have_any_against_invoice_receive_currently">You don\'t have any Against Invoice Receive currently.</string>
    <string name="you_don_t_have_any_against_invoice_payment_currently">You don\'t have any Against Invoice Payment currently.</string>
    <string name="you_don_t_have_any_contra_entry_currently">You don\'t have any Contra Entry currently.</string>
    <string name="you_don_t_have_any_expenses_currently">You don\'t have any Expenses currently.</string>
    <string name="you_don_t_have_any_banks_currently">You don\'t have any Banks currently.</string>
    <string name="you_don_t_have_any_advance_invoice_receive_currently">You don\'t have any Advance Receive currently.</string>
    <string name="you_don_t_have_any_advance_invoice_payment_currently">You don\'t have any Advance Payment currently.</string>
    <string name="you_don_t_have_any_customer_or_supplier_currently">You don\'t have any Customer or Supplier currently.</string>
    <string name="you_don_t_have_any_product_currently">You don\'t have any Product currently.</string>
    <string name="you_don_t_have_any_employee_currently">You don\'t have any Employee currently.</string>
    <string name="you_don_t_have_any_firm_currently">You don\'t have any Firm currently.</string>
    <string name="you_don_t_have_any_purchase_entry_currently">You don\'t have any Purchase Entry currently.</string>
    <string name="you_don_t_have_any_sales_person_currently">You don\'t have any Sales Person currently.</string>
    <string name="create_new_invoice">Create new Invoice</string>
    <string name="we_can_t_find_any_item_matching_your_search">We can\'t find any item matching your search</string>
    <string name="no_result_found">No Result Found</string>
    <string name="submenu">submenu</string>
    <string name="menu">menu</string>
    <string name="search_invoice">Search Invoice</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="date_range">Date Range</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_s_name">Customer\'s Name</string>
    <string name="status">Status</string>
    <string name="search">Search</string>
    <string name="paid">Paid</string>
    <string name="overdue">Overdue</string>
    <string name="partially_paid">Partially Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="title_activity_invoice">Invoicenj</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="due_date">Due Date</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="e_way_bill_no">E-way Bill No.</string>
    <string name="_109876509">109876509</string>
    <string name="items">Items</string>
    <string name="update">Update</string>
    <string name="download_pdf">Download PDF</string>
    <string name="duplicate_invoice">Duplicate Invoice</string>
    <string name="delete">Delete</string>
    <string name="payments">Payments</string>
    <string name="print_delivery_challan">Print Delivery Challan</string>
    <string name="print_packing_slip">Print Packing Slip</string>
    <string name="cancel">Cancel</string>
    <string name="clear_search">Clear Search</string>
    <string name="no_data_found">No Data Found</string>
    <string name="make_invoice">Make Invoice</string>
    <string name="select">Select</string>
    <string name="no_internet_connection_">No Internet Connection!</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="try_again">Try Again</string>
    <string name="credit_note">Credit Note</string>
    <string name="enter_all_fields">Enter All Fields</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="title_camera">Camera</string>
    <string name="title_gallery">Gallery</string>
    <string name="create_password">Create Password</string>
    <string name="share_pdf">Share PDF</string>
</resources>