<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/no_internet" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp20"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_internet_connection_"
            android:textColor="@color/black"
            android:textSize="@dimen/font_20"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5"
            android:gravity="center"
            android:text="@string/please_check_your_internet_connection"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp20"
            android:gravity="center">

            <Button
                android:id="@+id/btNoInternetPopupGoBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp10"
                android:background="@drawable/button_round_corner"
                android:paddingStart="@dimen/dp50"
                android:paddingTop="@dimen/dp10"
                android:paddingEnd="@dimen/dp50"
                android:paddingBottom="@dimen/dp10"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/font_12"
                android:visibility="gone" />

            <Button
                android:id="@+id/btNoInternetPopupRefresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp10"
                android:background="@drawable/button_round_corner"
                android:paddingStart="@dimen/dp50"
                android:paddingTop="@dimen/dp10"
                android:paddingEnd="@dimen/dp50"
                android:paddingBottom="@dimen/dp10"
                android:text="@string/try_again"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/font_12" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>