<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_gray"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        card_view:cardCornerRadius="20dp"
        card_view:cardElevation="4dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/llElementPopup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/finter_basic_background_color"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp50">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:gravity="center"
                android:text="@string/create_password"
                android:textColor="@color/finter_red"
                android:textSize="@dimen/font_20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvElementEmployeeCreateAccountErrorMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/enter_all_fields"
                android:textColor="@color/finter_red"
                android:textSize="@dimen/font_20" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/password_"
                android:textColor="@color/black"
                android:textSize="@dimen/font_14" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15"
                android:layout_marginEnd="@dimen/dp15"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="8dp"
                card_view:cardElevation="4dp"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etElementEmployeeCreateAccountPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/enter_password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:padding="@dimen/dp20"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_16" />

                    <ImageView
                        android:id="@+id/ivElementEmployeeCreateAccountPasswordShowHide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp10"
                        android:layout_marginEnd="@dimen/dp10"
                        android:src="@drawable/hide_password_red" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <com.abdulhakeem.seemoretextview.SeeMoreTextView
                android:id="@+id/tvEmployeeCreateAccountDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15"
                android:layout_marginEnd="@dimen/dp15"
                android:textColor="@color/white"
                android:textSize="@dimen/font_12" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/confirm_password_"
                android:textColor="@color/black"
                android:textSize="@dimen/font_14" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15"
                android:layout_marginEnd="@dimen/dp15"
                android:layout_marginBottom="@dimen/dp10"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="8dp"
                card_view:cardElevation="4dp"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/etElementEmployeeCreateAccountConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/enter_confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:padding="@dimen/dp20"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_16" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/llElementEmployeeCreateAccountButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp15"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btElementEmployeeCreateAccountCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:background="@color/finter_red"
                    android:paddingStart="@dimen/dp30"
                    android:paddingTop="@dimen/dp10"
                    android:paddingEnd="@dimen/dp30"
                    android:paddingBottom="@dimen/dp10"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_18" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btElementEmployeeCreateAccountSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@color/finter_red"
                    android:paddingStart="@dimen/dp30"
                    android:paddingTop="@dimen/dp10"
                    android:paddingEnd="@dimen/dp30"
                    android:paddingBottom="@dimen/dp10"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_18" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>