<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_gray"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        card_view:cardCornerRadius="20dp"
        card_view:cardElevation="4dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/llElementPopup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/finter_basic_background_color"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp50">

            <TextView
                android:id="@+id/tvElementImageSelectionCaptureTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:gravity="center"
                android:text="@string/select"
                android:textColor="@color/finter_red"
                android:textSize="@dimen/font_20"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/llElementImageSelectionCaptureCamera"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        app:srcCompat="@drawable/ic_photo_camera_black_48dp"
                        app:tint="@color/dialog_choose_icon_color" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/title_camera"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/dialog_choose_text_color" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llElementImageSelectionCaptureGallery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        app:srcCompat="@drawable/ic_photo_black_48dp"
                        app:tint="@color/dialog_choose_icon_color" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/title_gallery"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/dialog_choose_text_color" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btElementImageSelectionCaptureCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@null"
                android:paddingStart="@dimen/dp30"
                android:paddingTop="@dimen/dp10"
                android:paddingEnd="@dimen/dp30"
                android:paddingBottom="@dimen/dp10"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/finter_red"
                android:textSize="@dimen/font_18"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>